<resources>
    <string name="app_name">Notes</string>

    <string name="your_notes">Your notes</string>
    <string name="new_note">New note</string>
    <string name="note_details">Note details</string>
    <string name="note_deleted">Note deleted.</string>
    <string name="note_added">Note added.</string>
    <string name="note_title">Note title:</string>
    <string name="note_body">Note body:</string>
    <string name="sync_with_google">Synchronize with Google calendar</string>
    <string name="synced_with_google">Synchronized with Google calendar</string>
    <string name="protect_note">Protect note</string>
    <string name="note_date_and_time">Date and time:</string>
    <string name="voice_recognition_not_available">Speech recognition not available on this device!</string>
    <string name="text_recognition_error">Text recognition error!</string>
    <string name="note_protected">Protected</string>
    <string name="biometric_dialog_title">Protected note</string>
    <string name="biometric_dialog_text">Use your biometric credential to display note details</string>
    <string name="biometric_error">Biometric authorization error!</string>
    <string name="biometric_failed">Biometric authorization failed!</string>
    <string name="cancel">Cancel</string>
    <string name="biometric_unavailable">Note is protected, but this device does not support biometry!</string>
    <string name="sync_in_progress">Please wait, syncing with Google…</string>
    <string name="note_added_sync_failed">Note added, but synchronization with Google failed…</string>
    <string name="note_added_sync_success">Note added and synchronized with Google.</string>
    <string name="google_sign_in_failed">Google sign in failed!</string>
    <string name="no_camera_permission">Camera access denied!</string>
    <string name="no_calendar_permission">Calendar access denied!</string>
    <string name="removing_note">Please wait, removing note in progress…</string>
    <string name="note_deleted_sync_failed">Note deleted, but synchronization with Google failed…</string>
    <string name="google_log_in_success">Logged in to Google account.</string>
    <string name="google_log_out">Logged out from Google account.</string>
    <string name="logging_to_google">Please wait, logging to Google account in progress…</string>
</resources>