<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:padding="10dp">

    <TextView
        android:id="@+id/fragment_note_details_title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_title"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_note_details_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/blue"
        android:lines="1"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_note_details_title_label"
        tools:text="Lorem ipsum..." />

    <TextView
        android:id="@+id/fragment_note_details_body_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/note_body"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_note_details_title" />

    <TextView
        android:id="@+id/fragment_note_details_body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/blue"
        android:gravity="top"
        android:lines="10"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_note_details_body_label"
        tools:text="Lorem ipsum..." />

    <TextView
        android:id="@+id/fragment_note_details_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/note_date_and_time"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_note_details_body" />

    <TextView
        android:id="@+id/fragment_note_details_date_and_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/blue"
        android:padding="5dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_note_details_date_label"
        tools:text="01/01/2020 12:34" />

    <ImageView
        android:id="@+id/fragment_note_details_google_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_google_light"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_note_details_date_and_time"
        tools:ignore="ContentDescription"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/fragment_note_details_google_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/synced_with_google"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/fragment_note_details_google_image"
        app:layout_constraintStart_toEndOf="@id/fragment_note_details_google_image"
        app:layout_constraintTop_toTopOf="@id/fragment_note_details_google_image"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/fragment_note_details_protected_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_fingerprint"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_note_details_google_image"
        tools:ignore="ContentDescription"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/fragment_note_details_protect_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/note_protected"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/fragment_note_details_protected_image"
        app:layout_constraintStart_toEndOf="@id/fragment_note_details_protected_image"
        app:layout_constraintTop_toTopOf="@id/fragment_note_details_protected_image"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>